k8s/pihole/deployment.yaml
# Copyright (C) 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: "apps/v1beta1"
kind: "Deployment"
metadata:
  labels:
    k8s-app: "pi-hole"
  name: "pi-hole"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: "pi-hole"
        component: "pi-hole"
    spec:
      nodeSelector:
        pi-hole: "true"
      hostNetwork: true
      containers:
        - name: "pi-hole"
          image: "diginc/pi-hole-multiarch:v3.2.1_debian_armhf"
          imagePullPolicy: IfNotPresent
          ports:
            - name: "dns-tcp"
              containerPort: 53
              hostPort: 53
              protocol: "TCP"
            - name: "dns-udp"
              containerPort: 53
              hostPort: 53
              protocol: "UDP"
            - name: "http"
              containerPort: 80
              hostPort: 80
          securityContext:
            capabilities:
              add:
                - "NET_ADMIN"
          volumeMounts:
            - name: pihole-config
              mountPath: /etc/pihole
      volumes:
        - name: pihole-config
          persistentVolumeClaim:
            claimName: pihole-config
