k8s/pihole/service.yaml
# Copyright (C) 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  labels:
    app: pi-hole
    provider: jarvis
  name: pi-hole-ui
  namespace: tools
spec:
  type: LoadBalancer
  selector:
    app: pi-hole
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pi-hole
    provider: jarvis
  name: pi-hole-dns
  namespace: tools
spec:
  selector:
    app: pi-hole
  ports:
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
